--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -4,6 +4,7 @@
     text-align: center;
     height: 209px;
     background-color: $secondary-color;
+    margin-top: 2.5rem;
     &_logo {
         width: 122px;
         height: 40px;
