--- a/src/components/banner/Banner.scss
+++ b/src/components/banner/Banner.scss
@@ -1,14 +1,15 @@
 .banner {
     position: relative;
-    max-width: 1240px;
     height: 223px;
     overflow: hidden;
     border-radius: 25px;
+
     & img {
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
+
     &-overlay {
         position: absolute;
         top: 0;
@@ -18,15 +19,26 @@
         background-color: rgba(0, 0, 0, 0.3); 
         mix-blend-mode: darken; /* Effet de superposition sombre */
       }
+
     &_text {
         position: absolute;
-        top: 50%;
+        top: 30%;
         left: 50%;
         text-align: center;
+        background-color: bisque;
+        width: 100%;
         transform: translate(-50%, -50%);
         font-size: 4.8rem;
-        width: 100%;
         color: #FFFFFF;
+
+        @media (max-width: 375px) {
+            text-align: left;
+            font-size: 2.4rem;
+        }
+    }
+    
+    @media (max-width: 375px) {
+        max-height: 111px;
     }
 }
 
