--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -33,12 +33,11 @@
     color: #FFFFFF;
     font-size: 1.8rem;
   }
-  &-list {
+  &_container {
     display: flex;
     flex-wrap: wrap;
     max-width: 1240px;
     padding: 4.5rem;
-    margin-top: 4rem;
     background-color: #F6F6F6;
     gap: 4.4rem;
     border-radius: 25px;
