--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,18 +1,44 @@
 .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 1240px;
-    height: 68px;
-    margin: 4rem 10rem 0 10rem;
-    & img {
-        width: 210px;
+    padding: 3rem 2rem;
+
+    &_container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        max-width: 1240px;
         height: 68px;
+        margin: auto;
     }
+
+    &_logo {
+        width: 210px;
+
+        & img {
+            width: 100%;
+            height: 100%;
+        }
+
+        @media (max-width: 375px) {
+            width: 120px;
+        }
+    }
+
+    &_nav {
+        display: flex;
+        justify-content: space-between;
+        width: 265px;
+        font-size: 2.2rem;
+
+        @media (max-width: 375px) {
+            width: 150px;
+            font-size: 1.5rem;
+        }
+    }
+
     & a {
         color: $primary-color;
         text-decoration: none;
-        margin-left: 11rem;
+
         &.active {
             text-decoration: underline;
         }
