--- a/src/components/slideshow/Slideshow.scss
+++ b/src/components/slideshow/Slideshow.scss
@@ -1,47 +1,61 @@
 .slideshow {
-    &_image_container {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 415px;
-      max-width: 100%;
-      border-radius: 25px;
-      overflow: hidden;
-      position: relative;
-    }
+    height: 415px;
+    border-radius: 25px;
+    overflow: hidden;
+    position: relative;
   
-    &_arrow {
-        border: none;
-        background-color: transparent;
-        cursor: pointer;
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        z-index: 1;
-  
-        &-left {
-            left: 15px;
-        }
-  
-        &-right {
-            right: 15px;
-        }
-    }
-    
-    &_image {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        z-index: -1;
-        position: absolute;
-        object-position: center;
-      }
-    }
-  .slideshow_image_number {
+  &_arrow {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
     position: absolute;
-    top: 370px;
-    left: 620px;
-    font-size: 1.8rem;
-    color: white;
-    z-index: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1;
+
+    & img {
+      width: 100%;
+      height: 100%;
+
+    @media (max-width: 375px) {
+      width: 20px;
+      height: 20px;
+    }
   }
+
+    &-left {
+      left: 15px;
+    }
+  
+    &-right {
+      right: 15px;
+    }
+  }
+    
+  &_image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    position: absolute;
+    //object-position: center;
+  }
+
+  &_number {
+    position: absolute;
+    left: 50%;
+    bottom: 5%;
+    transform: translateX(-50%);   // Pour déplacer l'element horizontalement de moitié de sa propre largeur vers la gauche, sans cette transformation,le centre de l'élément serait aligné avec le bord gauche du conteneur parent
+    font-size: 1.8rem;
+    color: #FFFFFF;
+    z-index: 0;
+
+    @media (max-width: 375px) {
+      display: none;
+    }
+  }
+
+  @media (max-width: 375px) {
+    height: 255px;
+  }
+}
