--- a/src/components/collapse/Collapse.scss
+++ b/src/components/collapse/Collapse.scss
@@ -1,9 +1,9 @@
 @use "../../styles/abstracts/variables.scss";
 
 .collapse {
-    background-color: $bg-color;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+  background-color: $bg-color;
+  border-radius: map-get($br , medium);
+  animation: collapse-open 0.5s backwards;
 
     &_header {
       display: flex;
@@ -12,14 +12,29 @@
       padding: 10px 20px 10px 15px;
       height: 52px;
       background-color: $primary-color;
-      border-radius: 5px;
-      color: #FFFFFF;
+      border-radius: map-get($br , small);
+      font-size: 1.8rem;
+      color: $tertiary-color;
+
+      @media (max-width: $small) {
+        height: 30px; 
+        font-size: 1.3rem;  
+      }
     }
 
     &_content {
       color: $primary-color;
       padding: 1rem 2rem;
+      border-radius: map-get($br , mixed);
+  
+      &-open {
+        animation: collapse-open 0.5s backwards;
       }
+
+      &-close {
+        animation: collapse-close 0.5s forwards; 
+      }
+    }
 
     &_container {
       display: flex;
@@ -36,10 +51,16 @@
     &_arrow {
       transition: transform 0.5s ease-out;
       cursor: pointer;
+
+      @media (max-width: $small) { 
+        width: 2rem;  
+        height: 2rem;
+    }
       
       &-rotated {
         transform: rotate(-180deg);
       }
     }
   }
+
 
