--- a/src/styles/abstracts/variables.scss
+++ b/src/styles/abstracts/variables.scss
@@ -1,3 +1,9 @@
 $primary-color: #FF6060;
 $secondary-color: #000000;
-$bg-color: #F6F6F6;
+$tertiary-color: #FFFFFF;
+$bg-color: #F6F6F6;   // background-color
+
+$small: 699px;
+$medium: 1024px;
+
+$br: (small: 5px, medium: 10px, large: 25px, mixed: 0 0 10px 10px);   // border-radius
