--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -1,10 +1,19 @@
+@use "../../styles/abstracts/variables.scss";
+
 .card {
   position: relative;
   max-width: 340px;
+  width: 100%;
   height: 340px;
-  border-radius: 10px;
+  border-radius: map-get($br , medium);
+  margin: auto;
   overflow: hidden;
   cursor: pointer; 
+
+  @media (max-width: $small) {
+    max-width: 660px;
+    height: 255px;
+  }
   
   &_cover {
     width: 100%;
@@ -25,21 +34,40 @@
   }
   &_title {
     position: absolute;
-    top: 265px;
-    right: 10px;
-    width: 300px;
+    bottom: 0;
+    max-width: 300px;
     height: 52px;
     margin: 2rem;
-    color: #FFFFFF;
+    color: $tertiary-color;
     font-size: 1.8rem;
   }
+
   &_container {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     max-width: 1240px;
-    padding: 4.5rem;
-    background-color: #F6F6F6;
-    gap: 4.4rem;
-    border-radius: 25px;
+    padding: 5rem;
+    background-color: $bg-color;
+    gap: 6rem;
+    border-radius: map-get($br , large);
+
+    @media (max-width: $medium) {
+      grid-template-columns: repeat(2, 1fr);
+      padding: 3rem;
+      gap: 4rem;
+    }
+
+    @media (max-width: $small) {
+        grid-template-columns: repeat(1, 1fr);
+        padding: 0;
+        gap: 2rem;
+    }
   }
 }
+
+
+
+
+
+
+
