--- a/src/components/slideshow/Slideshow.scss
+++ b/src/components/slideshow/Slideshow.scss
@@ -1,6 +1,8 @@
+@use "../../styles/abstracts/variables.scss";
+
 .slideshow {
     height: 415px;
-    border-radius: 25px;
+    border-radius: map-get($br , large);
     overflow: hidden;
     position: relative;
   
@@ -17,9 +19,9 @@
       width: 100%;
       height: 100%;
 
-    @media (max-width: 375px) {
-      width: 20px;
-      height: 20px;
+    @media (max-width: $small) {
+      width: 2rem;
+      height: 2rem;
     }
   }
 
@@ -38,7 +40,6 @@
     object-fit: cover;
     z-index: -1;
     position: absolute;
-    //object-position: center;
   }
 
   &_number {
@@ -47,15 +48,15 @@
     bottom: 5%;
     transform: translateX(-50%);   // Pour déplacer l'element horizontalement de moitié de sa propre largeur vers la gauche, sans cette transformation,le centre de l'élément serait aligné avec le bord gauche du conteneur parent
     font-size: 1.8rem;
-    color: #FFFFFF;
+    color: $tertiary-color;
     z-index: 0;
 
-    @media (max-width: 375px) {
+    @media (max-width: $small) {
       display: none;
     }
   }
 
-  @media (max-width: 375px) {
+  @media (max-width: $small) {
     height: 255px;
   }
 }
