--- a/src/pages/apart/Apart.scss
+++ b/src/pages/apart/Apart.scss
@@ -1,22 +1,14 @@
 @use "../../styles/abstracts/variables.scss";
 
 .apart {
-    padding: 0 2rem;
-
-    &_container {
-        display: flex;
-        flex-direction: column;
-        max-width: 1240px;
-        gap: 2.5rem;
-        margin: auto;
-    }
+    @include page-layout;
 
     &_content {
         display: flex;
         justify-content: space-between;
         align-items: center;
 
-        @media (max-width: 375px) {
+        @media (max-width: $small) {
             flex-direction: column;
             gap: 3rem;
         }
@@ -26,7 +18,7 @@
             flex-direction: column;
             gap: 1rem;
             
-            @media (max-width: 375px) {
+            @media (max-width: $small) {
                 width: 100%;
             }
         }
@@ -36,7 +28,7 @@
             font-size: 3.6rem;
             margin: 0;
 
-            @media (max-width: 375px) {
+            @media (max-width: $small) {
                 font-size: 1.8rem;
             }
         }
@@ -46,7 +38,7 @@
             font-size: 1.8rem;
             margin: 0;
             
-            @media (max-width: 375px) {
+            @media (max-width: $small) {
                 font-size: 1.4rem;
             }
         }
@@ -59,13 +51,13 @@
 
         &_tag {
             background-color: $primary-color;
-            color: #FFFFFF;
+            color: $tertiary-color;
             font-size: 1.4rem;
             padding: 0.5rem 3rem;
             border: none;
-            border-radius: 10px;
+            border-radius: map-get($br , medium);
 
-            @media (max-width: 375px) {
+            @media (max-width: $small) {
                 font-size: 1rem;
                 height: 20px;
                 padding: 0.3rem 1rem;
@@ -77,7 +69,7 @@
             flex-direction: column;
             gap: 3rem;
 
-            @media (max-width: 375px) {
+            @media (max-width: $small) {
                 flex-direction: row;
                 justify-content: space-between;
                 align-items: center;
@@ -92,7 +84,7 @@
         align-items: center;
         gap: 1rem;
 
-        @media (max-width: 375px) {
+        @media (max-width: $small) {
             order: 2;
         }
 
@@ -102,7 +94,7 @@
             font-size: 1.8rem;
             margin: 0;
 
-            @media (max-width: 375px) {
+            @media (max-width: $small) {
                 font-size: 1.2rem;
             }
         }
@@ -112,7 +104,7 @@
             width: 64px;
             height: 64px;
 
-            @media (max-width: 375px) {
+            @media (max-width: $small) {
                 width: 32px;
                 height: 32px;    
             }
@@ -122,14 +114,23 @@
     &_collapse {
         display: flex;
         justify-content: space-between;
+        gap: 7.6rem;
 
         &_element {
-            max-width: 582px;
-            height: 52px;
+            width: 582px;
+
+            @media (max-width: $small) {
+                width: 100%;
+            }
+
+            & ul {
+                list-style-type: none;
+            }
         }
 
-        &_list{
-            list-style-type: none;
+        @media (max-width: $small) {
+            flex-direction: column;
+            gap: 2rem;
         }
     }
 }
