--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,8 @@
 @import 'abstracts/variables';
+@import 'abstracts/mixins';
 @import 'base/base';
 @import 'base/typography';
+@import 'animations/keyframes';
 
 @import '../components/header/header'; 
 @import '../components/footer/footer'; 
