--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -45,6 +45,10 @@
         color: $primary-color;
         text-decoration: none;
 
+        @media (max-width: $small) {
+            text-transform: uppercase;
+        }
+
         &.active {
             text-decoration: underline;
         }
