--- a/src/components/banner/Banner.scss
+++ b/src/components/banner/Banner.scss
@@ -1,43 +1,42 @@
 @use "../../styles/abstracts/variables.scss";
 
 .banner {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    height: 223px;
-    overflow: hidden;
-    border-radius: map-get($br , large);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  height: 223px;
+  overflow: hidden;
+  border-radius: map-get($br, large);
 
-    & img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
+  & img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 
-    &-overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.3); 
-        mix-blend-mode: darken; /* Effet de superposition sombre */
-      }
+  &--overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    mix-blend-mode: darken; /* Effet de superposition sombre */
+  }
 
-    &_text {
-        position: absolute;
-        font-size: 4.5rem;
-        color: $tertiary-color;
-        margin: 2rem;
+  &__text {
+    position: absolute;
+    font-size: 4.5rem;
+    color: $tertiary-color;
+    margin: 2rem;
 
-        @media (max-width: $small) {
-            font-size: 2.4rem;
-        }
-    }
-    
     @media (max-width: $small) {
-        max-height: 111px;
+      font-size: 2.4rem;
     }
-}
+  }
 
+  @media (max-width: $small) {
+    max-height: 111px;
+  }
+}
