--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -5,34 +5,42 @@
   max-width: 340px;
   width: 100%;
   height: 340px;
-  border-radius: map-get($br , medium);
+  border-radius: map-get($br, medium);
   margin: auto;
   overflow: hidden;
-  cursor: pointer; 
+  cursor: pointer;
 
   @media (max-width: $small) {
     max-width: 660px;
     height: 255px;
   }
-  
-  &_cover {
+
+  &__cover {
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
-  &-gradient {
+  &--gradient {
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+    background: linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(0, 0, 0, 0.5) 100%
+    );
 
     &:hover {
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.7) 100%); 
+      background: linear-gradient(
+        180deg,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(0, 0, 0, 0.7) 100%
+      );
     }
   }
-  &_title {
+  &__title {
     position: absolute;
     bottom: 0;
     max-width: 300px;
@@ -42,14 +50,14 @@
     font-size: 1.8rem;
   }
 
-  &_container {
+  &__container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     max-width: 1240px;
     padding: 5rem;
     background-color: $bg-color;
     gap: 6rem;
-    border-radius: map-get($br , large);
+    border-radius: map-get($br, large);
 
     @media (max-width: $medium) {
       grid-template-columns: repeat(2, 1fr);
@@ -58,16 +66,9 @@
     }
 
     @media (max-width: $small) {
-        grid-template-columns: repeat(1, 1fr);
-        padding: 0;
-        gap: 2rem;
+      grid-template-columns: repeat(1, 1fr);
+      padding: 0;
+      gap: 2rem;
     }
   }
 }
-
-
-
-
-
-
-
