--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,56 +1,56 @@
 .header {
-    padding: 3rem 2rem;
+  padding: 3rem 2rem;
+
+  @media (max-width: $small) {
+    padding: 0 2rem;
+  }
+
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1240px;
+    height: 68px;
+    margin: auto;
+    gap: 2rem;
+  }
+
+  &__logo {
+    width: 210px;
+
+    & img {
+      width: 100%;
+      height: 100%;
+    }
 
     @media (max-width: $small) {
-        padding: 0 2rem;
+      width: 120px;
+    }
+  }
+
+  &__nav {
+    display: flex;
+    justify-content: space-between;
+    width: 265px;
+    font-size: 2.2rem;
+    gap: 1rem;
+
+    @media (max-width: $small) {
+      max-width: 200px;
+      font-size: 1.5rem;
+    }
+  }
+
+  & a {
+    color: $primary-color;
+    text-decoration: none;
+
+    @media (max-width: $small) {
+      text-transform: uppercase;
     }
 
-    &_container {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        max-width: 1240px;
-        height: 68px;
-        margin: auto;
-        gap: 2rem;
+    &.active {
+      text-decoration: underline;
     }
-
-    &_logo {
-        width: 210px;
-
-        & img {
-            width: 100%;
-            height: 100%;
-        }
-
-        @media (max-width: $small) {
-            width: 120px;
-        }
-    }
-
-    &_nav {
-        display: flex;
-        justify-content: space-between;
-        width: 265px;
-        font-size: 2.2rem;
-        gap: 1rem;
-
-        @media (max-width: $small) {
-            max-width: 200px;
-            font-size: 1.5rem;
-        }
-    }
-
-    & a {
-        color: $primary-color;
-        text-decoration: none;
-
-        @media (max-width: $small) {
-            text-transform: uppercase;
-        }
-
-        &.active {
-            text-decoration: underline;
-        }
-    }
+  }
 }
