--- a/src/components/slideshow/Slideshow.scss
+++ b/src/components/slideshow/Slideshow.scss
@@ -1,12 +1,12 @@
 @use "../../styles/abstracts/variables.scss";
 
 .slideshow {
-    height: 415px;
-    border-radius: map-get($br , large);
-    overflow: hidden;
-    position: relative;
-  
-  &_arrow {
+  height: 415px;
+  border-radius: map-get($br, large);
+  overflow: hidden;
+  position: relative;
+
+  &__arrow {
     border: none;
     background-color: transparent;
     cursor: pointer;
@@ -19,22 +19,22 @@
       width: 100%;
       height: 100%;
 
-    @media (max-width: $small) {
-      width: 2rem;
-      height: 2rem;
+      @media (max-width: $small) {
+        width: 2rem;
+        height: 2rem;
+      }
     }
-  }
 
-    &-left {
+    &--left {
       left: 15px;
     }
-  
-    &-right {
+
+    &--right {
       right: 15px;
     }
   }
-    
-  &_image {
+
+  &__image {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -42,11 +42,13 @@
     position: absolute;
   }
 
-  &_number {
+  &__number {
     position: absolute;
     left: 50%;
     bottom: 5%;
-    transform: translateX(-50%);   // Pour déplacer l'element horizontalement de moitié de sa propre largeur vers la gauche, sans cette transformation,le centre de l'élément serait aligné avec le bord gauche du conteneur parent
+    transform: translateX(
+      -50%
+    ); // Pour déplacer l'element horizontalement de moitié de sa propre largeur vers la gauche, sans cette transformation,le centre de l'élément serait aligné avec le bord gauche du conteneur parent
     font-size: 1.8rem;
     color: $tertiary-color;
     z-index: 0;
