--- a/src/components/star/StarRating.scss
+++ b/src/components/star/StarRating.scss
@@ -1,10 +1,10 @@
-.star-rating {
-    display: flex;
-    max-width: 200px;
-    gap: 0.5rem;
+.star--rating {
+  display: flex;
+  max-width: 200px;
+  gap: 0.5rem;
 
-    @media (max-width: $small) {
-        width: 15px;
-        height: 15px;  
-    }
+  @media (max-width: $small) {
+    width: 15px;
+    height: 15px;
+  }
 }
