--- a/src/pages/apart/Apart.scss
+++ b/src/pages/apart/Apart.scss
@@ -1,145 +1,144 @@
 @use "../../styles/abstracts/variables.scss";
 
 .apart {
-    @include page-layout;
+  @include page-layout;
 
-    &_content {
-        display: flex;
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @media (max-width: $small) {
+      flex-direction: column;
+      gap: 3rem;
+    }
+
+    &__1 {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      @media (max-width: $small) {
+        width: 100%;
+      }
+    }
+
+    &__title {
+      color: $primary-color;
+      font-size: 3.6rem;
+      margin: 0;
+
+      @media (max-width: $small) {
+        font-size: 1.8rem;
+      }
+    }
+
+    &__location {
+      color: $primary-color;
+      font-size: 1.8rem;
+      margin: 0;
+
+      @media (max-width: $small) {
+        font-size: 1.4rem;
+      }
+    }
+
+    &__tags {
+      display: flex;
+      gap: 1rem;
+      margin-top: 2rem;
+    }
+
+    &__tag {
+      background-color: $primary-color;
+      color: $tertiary-color;
+      font-size: 1.4rem;
+      padding: 0.5rem 3rem;
+      border: none;
+      border-radius: map-get($br, medium);
+
+      @media (max-width: $small) {
+        font-size: 1rem;
+        height: 20px;
+        padding: 0.3rem 1rem;
+      }
+    }
+
+    &__2 {
+      display: flex;
+      flex-direction: column;
+      gap: 3rem;
+
+      @media (max-width: $small) {
+        flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        width: 100%;
+      }
+    }
+  }
 
-        @media (max-width: $small) {
-            flex-direction: column;
-            gap: 3rem;
-        }
+  &__host {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 1rem;
 
-        &_1 {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-            
-            @media (max-width: $small) {
-                width: 100%;
-            }
-        }
-
-        &_title {
-            color: $primary-color;
-            font-size: 3.6rem;
-            margin: 0;
-
-            @media (max-width: $small) {
-                font-size: 1.8rem;
-            }
-        }
-
-        &_location {
-            color: $primary-color;
-            font-size: 1.8rem;
-            margin: 0;
-            
-            @media (max-width: $small) {
-                font-size: 1.4rem;
-            }
-        }
-
-        &_tags {
-            display: flex;
-            gap: 1rem;
-            margin-top: 2rem;
-        }
-
-        &_tag {
-            background-color: $primary-color;
-            color: $tertiary-color;
-            font-size: 1.4rem;
-            padding: 0.5rem 3rem;
-            border: none;
-            border-radius: map-get($br , medium);
-
-            @media (max-width: $small) {
-                font-size: 1rem;
-                height: 20px;
-                padding: 0.3rem 1rem;
-            }
-        }
-        
-        &_2 {
-            display: flex;
-            flex-direction: column;
-            gap: 3rem;
-
-            @media (max-width: $small) {
-                flex-direction: row;
-                justify-content: space-between;
-                align-items: center;
-                width: 100%;
-            }
-        }
+    @media (max-width: $small) {
+      order: 2;
     }
 
-    &_host {
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        gap: 1rem;
+    &__name {
+      color: $primary-color;
+      max-width: 87px;
+      font-size: 1.8rem;
+      margin: 0;
 
-        @media (max-width: $small) {
-            order: 2;
-        }
-
-        &_name {
-            color: $primary-color;
-            max-width: 87px;
-            font-size: 1.8rem;
-            margin: 0;
-
-            @media (max-width: $small) {
-                font-size: 1.2rem;
-            }
-        }
-
-        &_img {
-            border-radius: 50%;
-            width: 64px;
-            height: 64px;
-
-            @media (max-width: $small) {
-                width: 32px;
-                height: 32px;    
-            }
-        }
+      @media (max-width: $small) {
+        font-size: 1.2rem;
+      }
     }
 
-    &_collapse {
-        display: flex;
-        justify-content: space-between;
-        gap: 7.6rem;
+    &__img {
+      border-radius: 50%;
+      width: 64px;
+      height: 64px;
 
-        &_element {
-            width: 582px;
+      @media (max-width: $small) {
+        width: 32px;
+        height: 32px;
+      }
+    }
+  }
 
-            @media (max-width: $small) {
-                width: 100%;
-            }
+  &__collapse {
+    display: flex;
+    justify-content: space-between;
+    gap: 7.6rem;
 
-            & ul {
-                list-style-type: none;
-            }
-        }
+    &__element {
+      width: 582px;
 
-        @media (max-width: $small) {
-            flex-direction: column;
-            gap: 2rem;
-        }
+      @media (max-width: $small) {
+        width: 100%;
+      }
+
+      & ul {
+        list-style-type: none;
+      }
     }
 
-    &_error {
-        text-align: center;
-        color: $primary-color;
-        font-size: 3rem;
-        font-weight: 700;
-        margin: 10rem 0 20rem 0;
+    @media (max-width: $small) {
+      flex-direction: column;
+      gap: 2rem;
     }
+  }
+
+  &__error {
+    text-align: center;
+    color: $primary-color;
+    font-size: 3rem;
+    font-weight: 700;
+    margin: 10rem 0 20rem 0;
+  }
 }
-
