--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 
 *,
 ::before,
 ::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 62.5%;   /* equivalent of 10px on the root element */
+  font-size: 62.5%; /* equivalent of 10px on the root element */
 }
