--- a/src/pages/about/About.scss
+++ b/src/pages/about/About.scss
@@ -1,9 +1,11 @@
 .about {
   @include page-layout;
 
-  &__collapse__element {
-    @media (max-width: $small) {
-      width: 100%;
-    }
+  &__collapse__container {
+    display: flex;
+    flex-direction: column;
+    max-width: 1023px;
+    margin: auto;
+    gap: 3rem;
   }
 }
