--- a/src/styles/abstracts/variables.scss
+++ b/src/styles/abstracts/variables.scss
@@ -6,9 +6,10 @@ $bg-color: #f6f6f6; // background-color
 $small: 699px;
 $medium: 1024px;
 
+// border-radius
 $br: (
   small: 5px,
   medium: 10px,
   large: 25px,
   mixed: 0 0 10px 10px,
-); // border-radius
+);
